internal/xds/translator/testdata/out/xds-ir/http3-multiple-listeners-same-port.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      responseHeadersToAdd:
      - append: true
        header:
          key: alt-svc
          value: h3=":443"; ma=86400
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: second-listener
  virtualHosts:
  - domains:
    - '*'
    name: second-listener/*
    routes:
    - match:
        prefix: /
      name: second-route
      responseHeadersToAdd:
      - append: true
        header:
          key: alt-svc
          value: h3=":443"; ma=86400
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
